; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_nfa.c_hasconstraintout.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_nfa.c_hasconstraintout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.state = type { %struct.arc* }
%struct.arc = type { %struct.arc* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.state*)* @hasconstraintout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hasconstraintout(%struct.state* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.state*, align 8
  %4 = alloca %struct.arc*, align 8
  store %struct.state* %0, %struct.state** %3, align 8
  %5 = load %struct.state*, %struct.state** %3, align 8
  %6 = getelementptr inbounds %struct.state, %struct.state* %5, i32 0, i32 0
  %7 = load %struct.arc*, %struct.arc** %6, align 8
  store %struct.arc* %7, %struct.arc** %4, align 8
  br label %8

8:                                                ; preds = %17, %1
  %9 = load %struct.arc*, %struct.arc** %4, align 8
  %10 = icmp ne %struct.arc* %9, null
  br i1 %10, label %11, label %21

11:                                               ; preds = %8
  %12 = load %struct.arc*, %struct.arc** %4, align 8
  %13 = call i64 @isconstraintarc(%struct.arc* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %11
  store i32 1, i32* %2, align 4
  br label %22

16:                                               ; preds = %11
  br label %17

17:                                               ; preds = %16
  %18 = load %struct.arc*, %struct.arc** %4, align 8
  %19 = getelementptr inbounds %struct.arc, %struct.arc* %18, i32 0, i32 0
  %20 = load %struct.arc*, %struct.arc** %19, align 8
  store %struct.arc* %20, %struct.arc** %4, align 8
  br label %8

21:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %15
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i64 @isconstraintarc(%struct.arc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
